--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Dummy PWA Landing Page</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-  
     <link rel="icon" href="icons/icon-192x192.png" type="image/png">
-    
+    <!-- Register the Service Worker -->
     <script defer src="app.js"></script>
 </head>
 <body>
