--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dummy PWA Landing Page</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="icons/icon-192x192.png" type="image/png">
+    <link rel="icon" href="icons/icon-192.png" type="image/png">
     <!-- Register the Service Worker -->
     <script defer src="app.js"></script>
 </head>
