--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dummy PWA Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="manifest" href="manifest.json"> -->
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icons/icon-192.png" type="image/png">
     <!-- Register the Service Worker -->
